# QA-Autonoumous-AI-Agent

./: .gitignore  CONTEXT.md  Home.py  README.md  conftest.py  main.py  main_multipage.py  prompts.py  prompts.txt  pyproject.toml  pytest.ini  requirements.txt  run_eval.py
pages/: 2_Multipage_Testing.py
qa_agent/: __init__.py  events.py  llm.py  models.py  pipeline.py  prd.py  prompts.py
qa_agent/steps/: analyst.py  coder.py  designer.py  executor.py  explorer.py  healer.py  inquirer.py  orchestrator.py  reporter.py  validator.py
reports/: junit.xml
reports/test-output/tests-generated-test-user-can-click-login-button-to-submit-login-form-py-test-user-can-click-login-button-to-submit-login-form-chromium/: video.webm
reports/test-output/tests-generated-test-user-can-enter-email-in-email-input-field-py-test-user-can-enter-email-in-email-input-field-chromium/: video.webm
reports/test-output/tests-generated-test-user-can-enter-email-on-the-login-page-py-test-user-can-enter-email-on-the-login-page-chromium/: video.webm
reports/test-output/tests-generated-test-user-can-enter-password-in-password-input-field-py-test-user-can-enter-password-in-password-input-field-chromium/: video.webm
tests_generated/: test_user_can_enter_email_on_the_login_page.py  test_user_can_see_the_otp_code_field_on_the_signup_verification_page.py  test_user_is_redirected_to_otp_verification_page_after_clicking_login_button.py
(+1 files in other folders)
