[project]
name = "qa-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.4",
    "langchain-openai>=1.2.1",
    "playwright>=1.59.0",
    "pypdf2>=3.0.1",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
